# WAN_SIM

./: .gitattributes  .gitignore  README.md  VERSION  WANsim.sh  WANsim2.sh  script_combinado.sh  wansim_l2l_single_iface.sh
DashboardAPI-EC/: .env.example  README.md  docker-compose.yml
DashboardAPI-EC/backend/: Dockerfile  pyproject.toml
DashboardAPI-EC/backend/app/: __init__.py  main.py
DashboardAPI-EC/backend/app/api/: router.py
DashboardAPI-EC/backend/app/api/routes/: appliances.py  compatibility.py  health.py  orchestrators.py  system.py
DashboardAPI-EC/backend/app/compatibility/: __init__.py  engine.py  loader.py
DashboardAPI-EC/backend/app/compatibility/profiles/: edgeconnect-9.3.json  edgeconnect-9.4.json  edgeconnect-9.5.json  edgeconnect-9.6.json
DashboardAPI-EC/backend/app/core/: config.py  security.py
DashboardAPI-EC/backend/app/db/: init_db.py  session.py
DashboardAPI-EC/backend/app/models/: __init__.py  appliance.py  audit.py  base.py  compatibility.py  orchestrator.py
DashboardAPI-EC/backend/app/schemas/: appliance.py  compatibility.py  orchestrator.py  system.py
DashboardAPI-EC/backend/app/services/: appliance_service.py  audit_service.py  orchestrator_service.py  system_service.py
DashboardAPI-EC/backend/app/workers/: celery_app.py  tasks.py
DashboardAPI-EC/backend/tests/: test_compatibility_engine.py
DashboardAPI-EC/docs/ADR/: ADR-0001-compatibility-layer.md
DashboardAPI-EC/frontend/: index.html  package.json  pnpm-lock.yaml
DashboardAPI-EC/scripts/: dev-check.sh
docs/: PROJECT_STRUCTURE.md
(+11 files in other folders)
